--- a/src/components/Activities/Activity/Activity.css
+++ b/src/components/Activities/Activity/Activity.css
@@ -1,15 +1,16 @@
-.postParent{
+.parentActivities{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
-.eachPost{
+.activityBox{
     border: 1px solid black;
     display: flex;
     flex-direction: column;
-    text-align: center;
+    align-items: center;
     width: 50vh;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
+    font-style: oblique;
 }
