--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,57 @@
-.headerElements{
-    display: flex;
-    justify-content: space-around;
+.headerParent {
+    margin-bottom: 0; /* Elimina cualquier margen adicional */
+    border-bottom: 2px solid rgba(255, 255, 255, 0.2); /* Línea blanca sutil con opacidad */
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); /* Sombras suaves para resaltar la línea */
 }
 
-a{
+.headerElements {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: linear-gradient(135deg, #1abc9c, #16a085); 
+    color: white;
+    padding: 15px 0;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    font-size: 1rem;
+    font-weight: 500;
+}
+.headerElements a {
     all: unset;
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 8px; 
+    transition: all 0.3s ease;
+}
+
+.headerElements a:hover {
+    color: #1f8e7d;
+    text-decoration: underline;
+    transform: translateY(-2px); 
+}
+
+.headerElements span {
+    all: unset;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: all 0.3s ease;
+}
+
+.headerElements span:hover {
+    color: #1f8e7d;
+    transform: translateY(-2px);
+}
+
+
+@media (max-width: 768px) {
+    .headerElements {
+        flex-direction: column;
+        gap: 20px;
+    }
 }
