--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -1,15 +1,77 @@
-.postParent{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+/* Contenedor principal para los posts */
+.postParent {
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 300px;
+    height: 300px;
+    margin: 0 auto;
+    margin-top: 10px;
+    text-align: center;
+}
+.postParent h3 {
+    font-size: 2rem;
+    font-weight: 700;
+    color: #000000;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
-.eachPost{
-    border: 1px solid black;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    width: 50vh;
-    margin: 10px;
+.eachPost {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+.eachPost:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+}
+.eachPost p {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #000000;
+    text-decoration: none;
+    margin-bottom: 10px;
+    transition: color 0.3s ease;
+}
+
+.eachPost span {
+    font-size: 1rem;
+    color: #000000;
+    margin-bottom: 10px;
+    display: block;
+}
+
+.eachPost span:nth-child(3) {
+    font-size: 0.9rem;
+    color: #000000;
+    margin-bottom: 15px;
+}
+
+
+/* Estilo del botón de Like */
+.eachPost button {
+    font-size: 1rem;
+    color: rgb(255, 0, 0);
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    margin: 5px;
+}
+
+.eachPost button:hover {
+    transform: scale(1.05);
+}
+
+.eachPost a {
+    text-decoration: none;
+}
+
+svg{
+    color: red;
 }
