--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -6,6 +6,7 @@
     height: 300px;
     margin: 0 auto;
     margin-top: 10px;
+    display: flex;
     text-align: center;
 }
 .postParent h3 {
@@ -13,8 +14,8 @@
     font-weight: 700;
     color: #000000;
     text-align: center;
-    margin-bottom: 20px;
 }
+
 
 .eachPost {
     background-color: #ffffff;
@@ -42,7 +43,6 @@
 .eachPost span {
     font-size: 1rem;
     color: #000000;
-    margin-bottom: 10px;
     display: block;
 }
 
@@ -64,6 +64,10 @@
     margin: 5px;
 }
 
+.buttons{
+    display: flex;
+    justify-content: center;
+}
 .eachPost button:hover {
     transform: scale(1.05);
 }
@@ -75,3 +79,14 @@
 svg{
     color: red;
 }
+
+.post-image {
+    width: 100%;
+    max-width: 400px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-top: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
