--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,5 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    background:#c3f3d7; /* Degradado suave */
+    background:#3bc976; /* Degradado suave */
   }
