--- a/src/components/Admin/PostAdmin/PostAdmin.css
+++ b/src/components/Admin/PostAdmin/PostAdmin.css
@@ -26,7 +26,7 @@
   top: 0;
   left: 0;
   width: 4px;
-  height: 100%;
+  height: 100px;
   background: linear-gradient(to bottom, #0011ff, #2e39d3);
 }
 
