--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,7 +1,7 @@
 /* Asegúrate de que el contenedor del Swiper ocupe todo el ancho disponible */
 .swiper-container {
     width: 100%;
-    height: 50vh; /* Esto hace que ocupe toda la altura de la pantalla */
+    height: 70vh; /* Esto hace que ocupe toda la altura de la pantalla */
   }
   
   /* Imagen dentro del SwiperSlide */
@@ -14,6 +14,7 @@
   
   /* Opcionalmente, puedes ajustar la altura según tus preferencias */
   .swiper-slide {
-    height: 30vh; /* Ajusta la altura que prefieras */
+    height: 60vh; /* Ajusta la altura que prefieras */
+    width: 100%;
   }
   
