--- a/src/components/Posts/Post/Post.css
+++ b/src/components/Posts/Post/Post.css
@@ -1,14 +1,11 @@
 /* Contenedor principal para los posts */
 .postParent {
-    padding: 20px;
-    border-radius: 8px;
-    max-width: 300px;
-    height: 300px;
-    margin: 0 auto;
-    margin-top: 10px;
+    width: 100%;
+    padding: 10px;
     display: flex;
-    text-align: center;
+    flex-direction: column;
 }
+
 .postParent h3 {
     font-size: 2rem;
     font-weight: 700;
@@ -16,21 +13,23 @@
     text-align: center;
 }
 
-
 .eachPost {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     padding: 15px;
-    margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .eachPost:hover {
     transform: translateY(-5px);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
+
 .eachPost p {
     font-size: 1.4rem;
     font-weight: 600;
@@ -43,7 +42,7 @@
 .eachPost span {
     font-size: 1rem;
     color: #000000;
-    display: block;
+    margin: 5px 0;
 }
 
 .eachPost span:nth-child(3) {
@@ -51,7 +50,6 @@
     color: #000000;
     margin-bottom: 15px;
 }
-
 
 /* Estilo del botón de Like */
 .eachPost button {
@@ -62,12 +60,15 @@
     cursor: pointer;
     transition: all 0.3s ease;
     margin: 5px;
+    background: none;
 }
 
-.buttons{
+.buttons {
     display: flex;
     justify-content: center;
+    margin: 10px 0;
 }
+
 .eachPost button:hover {
     transform: scale(1.05);
 }
@@ -76,7 +77,7 @@
     text-decoration: none;
 }
 
-svg{
+svg {
     color: red;
 }
 
@@ -86,7 +87,7 @@ svg{
     height: auto;
     object-fit: cover;
     border-radius: 10px;
-    margin-top: 10px;
+    margin: 10px auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
+}
   
